--- a/docs/explore/redisinsight/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsight/redisearch/index-redisearch.mdx
@@ -27,7 +27,7 @@ RediSearch allows you to quickly create indexes on datasets (Hashes), and uses a
 
 ### Step 1. Create Redis database
 
-[Follow this link to create Redis database using Docker container ](/explore/redismod)that comes with RediSearch module enabled
+[Follow this link to create Redis Stack database](/create/redis-stack) that comes with RediSearch module enabled
 
 ## Step 2: Download RedisInsight
 
@@ -140,7 +140,7 @@ Let us look at Movie sample dataset too.
 
 ### Step 8. Create Redis database
 
-[Follow this link to create Redis database using Docker container ](/explore/redismod)that comes with RediSearch module enabled
+[Follow this link to create Redis Stack database using Docker container](/create/redis-stack) that comes with RediSearch module enabled
 
 ### Step 9. Install RedisInsight
 
