--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -24,7 +24,7 @@ With RedisInsight browser tool, you can perform the below sets of activities:
 
 ## Step 1. Create Redis database
 
-[Follow this link to create Redis database using Docker container ](https://developer.redis.com/explore/redismod)that comes with RedisTimeSeries module enabled
+[Follow this link to create Redis Stack database](/create/redis-stack) that comes with RedisTimeSeries module enabled
 
 ## Step 2: Download RedisInsight
 
