--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -282,7 +282,7 @@ Copy config/application.yml.example to config/application.yml
 ### Step 5. Run Redis Docker container
 
 ```bash
- docker run -d -p 6379:6379 redislabs/redismod
+ docker run -d -p 6379:6379 redis/redis-stack:latest
 ```
 
 ### Step 6. Running the app
