--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -41,10 +41,10 @@ Let us see how to explore Python code using Pycograph and RedisGraph below:
 
 ### Step 3. Start RedisGraph Module
 
-The redislabs/redismod Docker image provides you all the essential Redis modules.
+The redis/redis-stack Docker image provides you all the essential Redis modules.
 
 ```bash
- docker run -d -p 6379:6379 redislabs/redismod
+ docker run -d -p 6379:6379 redis/redis-stack
 ```
 
 ### Step 4. Run RedisInsight
