--- a/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
@@ -29,10 +29,10 @@ redisgraph-rb is a Ruby gem client for the RedisGraph module. It relies on redis
 
 Follow the steps below to get started with RedisGraph with Ruby:
 
-### Step 1. Run RedisMod Docker container
+### Step 1. Run Redis Stack Docker container
 
 ```bash
- docker run -p 6379:6379 --name redislabs/redismodCopy
+ docker run -p 6379:6379 --name redis/redis-stack
 ```
 
 ### Step 2. Verify if RedisGraph module is loaded
