--- a/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
+++ b/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
@@ -29,10 +29,10 @@ redisgraph-rs is an idiomatic Rust client for RedisGraph, the graph database by 
 
 Follow the steps below to get started with RedisGraph with Rust:
 
-### Step 1. Run RedisMod Docker container
+### Step 1. Run Redis Stack Docker container
 
 ```bash
- docker run -p 6379:6379 --name redislabs/redismod
+ docker run -p 6379:6379 --name redis/redis-stack
 ```
 
 ### Step 2. Verify if RedisGraph module is loaded
