--- a/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
+++ b/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
@@ -142,7 +142,7 @@ From the node-js-crash-course directory, start Redis using `docker-compose`:
  $ docker ps
 ```
 
-The output from the docker ps command should show one container running, using the "redislabs/redismod" image. This container runs Redis 6 with the RediSearch, RedisJSON and RedisBloom modules.
+The output from the docker ps command should show one container running, using the "redis/redis-stack" image. This container runs Redis with the RediSearch, RedisJSON, RedisGraph, RedisTimeSeries, and RedisBloom modules.
 
 ### Step 3. Load the Sample Data into Redis
 
