--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
@@ -115,21 +115,13 @@ The docker compose YAML file below can get started quickly. You can place at the
 version: '3.9'
 services:
   redis:
-    image: 'redislabs/redismod:edge'
+    image: 'redis/redis-stack:latest'
     ports:
       - '6379:6379'
     volumes:
       - ./data:/data
-    entrypoint: >
-      redis-server
-        --loadmodule /usr/lib/redis/modules/redisai.so
-        --loadmodule /usr/lib/redis/modules/redisearch.so
-        --loadmodule /usr/lib/redis/modules/redisgraph.so
-        --loadmodule /usr/lib/redis/modules/redistimeseries.so
-        --loadmodule /usr/lib/redis/modules/rejson.so
-        --loadmodule /usr/lib/redis/modules/redisbloom.so
-        --loadmodule /var/opt/redislabs/lib/modules/redisgears.so
-        --appendonly yes
+    environment:
+      - REDIS_ARGS: --save 20 1
     deploy:
       replicas: 1
       restart_policy:
