--- a/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
+++ b/docs/develop/node/node-crash-course/runningtheapplication/index-runningtheapplication.mdx
@@ -57,7 +57,7 @@ Creating rediscrashcourse ... done
 $ docker ps
 ```
 
-The output from the docker ps command should show one container running, using the "redislabs/redismod" image. This container runs Redis 6 with the RediSearch, RedisJSON and RedisBloom modules.
+The output from the docker ps command should show one container running, using the "redis/redis-stack" image. This container runs Redis with the RediSearch, RedisJSON, RedisGraph, RedisTimeSeries, and RedisBloom modules.
 
 ### Load the Sample Data into Redis
 
