--- a/docs/howtos/redisgraph/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisgraph/using-go/index-usinggo.mdx
@@ -18,10 +18,10 @@ The `redisgraph-go` is a Golang client for the RedisGraph module. It relies on r
 
 Follow the steps below to get started with RedisGraph with Go:
 
-### Step 1. Run RedisMod Docker container
+### Step 1. Run Redis Stack Docker container
 
 ```bash
- docker run -p 6379:6379 --name redislabs/redismodCopy
+ docker run -p 6379:6379 --name redis/redis-stack
 ```
 
 ### Step 2. Verify if RedisGraph module is loaded
