--- a/docs/howtos/redisgraph/using-javascript/index-usingjavascript.mdx
+++ b/docs/howtos/redisgraph/using-javascript/index-usingjavascript.mdx
@@ -16,10 +16,10 @@ RedisGraph is the fastest graph database that processes complex graph operations
 
 Follow the steps below to get started with RedisGraph with Java:
 
-### Step 1. Run RedisMod Docker container
+### Step 1. Run Redis Stack Docker container
 
 ```bash
- docker run -p 6379:6379 --name redislabs/redismod
+ docker run -p 6379:6379 --name redis/redis-stack
 ```
 
 ### Step 2. Verify if RedisGraph module is loaded
