fixes #354, using current latest snapshot version of Redis OM Spring, adding note about version updates

--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
@@ -65,11 +65,17 @@ To use Redis OM Spring, open the `pom.xml` file and add the Redis OM Spring Mave
 
 ```xml
 <dependency>
-  <groupId>com.redis.om.spring</groupId>
-  <artifactId>redis-om-spring</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+    <groupId>com.redis.om</groupId>
+    <artifactId>redis-om-spring</artifactId>
+    <version>0.5.2-SNAPSHOT</version>
 </dependency>
 ```
+
+:::note
+
+Please check the official [Redis OM Spring GitHub repository](https://github.com/redis/redis-om-spring) for the latest version information
+
+:::
 
 ### Gradle
 
