changing to use proper note admonitions

--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-hash.mdx
@@ -53,9 +53,17 @@ The dependencies included are:
 - _Lombok_: Java annotation library which helps to reduce boilerplate code.
 - _Spring Boot DevTools_: Provides fast application restarts, LiveReload, and configurations for enhanced development experience.
 
-_NOTE:_ If your IDE has the Spring Initializr integration, you can complete this process from your IDE.
+:::note
 
-_NOTE:_ You can also fork the project from Github and open it in your IDE or other editor.
+If your IDE has the Spring Initializr integration, you can complete this process from your IDE.
+
+:::
+
+:::note
+
+You can also fork the project from Github and open it in your IDE or other editor.
+
+:::
 
 ## Adding Redis OM Spring
 
