--- a/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
+++ b/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
@@ -146,10 +146,13 @@ Some examples of possible alerts that could be setup for a given metric:
 | `master_link_down_since` | > 30 seconds: replication should be operational         |
 | `rdb_last_save_time`     | > maximum acceptable interval without taking a snapshot |
 
-<strong>
-  NOTE: This is not an exhaustive list, but just to give you an idea of how the
+
+:::note
+
+This is not an exhaustive list, but just to give you an idea of how the
   metrics in INFO could be used.
-</strong>
+
+:::
 
 ## Latency and stats data via redis-cli options
 
